--- a/sulekha-clone-client-working/public/index.html
+++ b/sulekha-clone-client-working/public/index.html
@@ -667,7 +667,7 @@
     <header class="main-header">
         <div class="header-container">
             <a href="#" class="logo">
-                <span>Sulekha</span>
+                <span>Service Hub</span>
             </a>
             
             <div class="search-container">
