--- a/sulekha-clone-client-working/public/index.html
+++ b/sulekha-clone-client-working/public/index.html
@@ -679,7 +679,9 @@
             
             <div class="header-buttons">
                 <button class="post-ad-btn"><i class="fas fa-plus"></i> Post Free Ad</button>
-                <button class="login-btn"><i class="fas fa-user"></i> Login</button>
+                <button class="login-btn" onclick="window.location.href='auth.html'">
+    <i class="fas fa-user"></i> Login
+</button>
             </div>
         </div>
     </header>
